<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Milestone 2 Toolbox(M2T)</string>
    <string name="flashlight">Flash Light(M2T)</string>
    <string name="lockscreen">Lock Screen(M2T)</string>
    <string name="power">Power Manager(M2T)</string>
    <string name="lcdbacklight">LCD Back Light</string>
    
	<string name="title_QuickNavPanel">QuickNav\n(Set as default)</string>
	<string name="shortcut_title_ShortCutCreater">QuickNavPanel(M2T)</string>
	
	<string name="text_about_debounce">Read More：
	http://forum.xda-developers.com/showthread.php?t=1058544 ;
	http://forum.xda-developers.com/showpost.php?p=15378789 ;
	https://git.zerfleddert.de/cgi-bin/gitweb.cgi/ms2-fixes ;
	</string>
	    
	<string name="text_version">Version: {0}</string>
	<string name="text_author">Author: {0} \n Translation: dangpzanco,Endless7</string>
	
	<string name="dialog_title_tip">Tip</string>
	<string name="dialog_title_warning">Warning</string>
	<string name="dialog_title_error">Error</string>
	<string name="msg_power_reboot">Whether immediately reboot phone ?</string>
	<string name="msg_power_rebootToRecovery">Whether immediately reboot to recovery mode ? </string>
	
	<string name="btn_ok">OK</string>
	<string name="btn_confirm">OK</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_apply">Apply</string>
	<string name="btn_auto">Auto</string>
	
	<string name="msg_noRoot">No Root Found! App Will Exit!</string>
	<string name="msg_noBusybox">Busybox not installed and I failed miserably when installing it!</string>
	<string name="msg_restoreToDefault">Restore Default</string>
	<string name="msg_successfullyApplied">Successfully Applied</string>
	<string name="msg_failedToApply">Failed to Apply</string>
	
	<string name="msg_tip_root">(ROOT)</string>
	<string name="msg_tip_noRoot">(No ROOT)</string>
	
	<string name="msg_soundDisable_fail">Failed to Apply, sound file does not exist!</string>
	
	<string name="msg_notInstallPlugin">Not installed please download from the forum</string>
	
	<string name="msg_wifiScanInterval_applyAndNewValue">Successfully Applied, new value is {0} seconds </string>
	
	<string name="msg_multiTouch_restore">Restored system default multi-touch</string>
	<string name="msg_multiTouch_success">Successfuly applied {0} point multitouch</string>
	<string name="msg_multiTouch_fail">Failed to apply {0} point multitouch</string>
	
	<string name="text_noSetting_2_3_x">2.3.x no set </string>
	<string name="text_noNeedSetting_2_3_x">2.3.x without setting</string>
	
	<string name="text_basedCmNotSupported">Based CM, not supported </string>
	
	<string name="text_noInstall">Not installed {0}</string>
	
	<string name="dlg_title_selectApp">Please select app</string>
	<string name="text_currentApp">Current: {0} \n Must installed \'{1}\' </string>
		
	<string name="power_btn_powerOff">Quick shutdown</string>
	<string name="power_btn_reboot">Quick reboot</string>
	<string name="power_btn_rebootToRecovery">Reboot to recovery mode</string>
	<string name="power_btn_systemPoweroff">System power menu</string>	
	<string name="power_text_powerOff">Power off now ?</string>
	<string name="power_text_reboot">Reboot now ?</string>
	<string name="power_text_rebootToRecovery">Reboot to recovery mode now ?</string>
	<string name="power_text_systemPoweroff">Open system power menu ?</string>

	<string name="oc_title">OverClock Tool </string>
	<string name="oc_msg_noOverClock">System not over clock</string>
	<string name="oc_help_title">OC Help</string>
	<string name="oc_help_content">1. 请通过\'测试\'进行尝试，确保可以稳定工作，再选择\'应用\'. \n 2. 应用并选择开机自动超频，如果系统反复重启，请拔掉sd卡，再开机.</string>
	<string name="oc_tip_noOverClock"> no over clock</string>
	<string name="oc_tip_overClock"> Max clock:{0} vsel:{1}</string>
	<string name="oc_tv_freqVsel">Clock and Vsel</string>
	<string name="oc_tv_onekeyset">Boost: </string>
	<string name="oc_tv_onekeysaveenergy">Save Energy: </string>
	<string name="oc_chb_ocAutoApply">Auto Apply (need a SD Card)</string>
	<string name="oc_tv_custom">Custom</string>
	<string name="oc_tv_custom_tip">You can set four clocks (MHz) and voltages (Vsel)</string>
	<string name="oc_tv_freq1">Clock 1</string>
	<string name="oc_tv_freq2">Clock 2</string>
 	<string name="oc_tv_freq3">Clock 3</string>
 	<string name="oc_tv_freq4">Clock 4</string>
 	<string name="oc_btn_ocProfile1">Profile1 </string>
 	<string name="oc_btn_ocProfile2">Profile2 </string>
 	<string name="oc_btn_ocProfile3">Profile3 </string>
 	<string name="oc_btn_ocProfile4">Profile4 </string>
 	<string name="oc_btn_ocTest"> Test</string>
 	<string name="oc_btn_ocApply"> Apply</string>
 	<string name="oc_btn_current"> Current</string>
 	<string name="oc_btn_ocRestoreDefault"> Restore</string>
 	<string name="oc_btn_ocSaveProfile"> Save Profile </string>
 	<string name="oc_btn_ocHelp">Help </string>
 	<string name="oc_msg_ocOneKeyTip">Please click \'Apply\' or \'Test\' </string>

	<string name="mfm_tv_mem1">Foreground Application(MB)</string>
	<string name="mfm_tv_mem2">Visible Application(MB)</string>
	<string name="mfm_tv_mem3">Secondary Server(MB)</string>
	<string name="mfm_tv_mem4">Hidden Application(MB)</string>
	<string name="mfm_tv_mem5">Content Provider(MB)</string>
	<string name="mfm_tv_mem6">Empty Application(MB)</string>
	<string name="mfm_cbMemAutoApply">Apply on boot</string>
	<string name="mfm_btnMemSaveDefault">Save to Defined</string>
	<string name="mfm_btnMemDefault">Default</string>
	<string name="mfm_btnMemMild">Mild</string>
	<string name="mfm_btnMemPositive">Positive</string>
	<string name="mfm_btnMemDefined">Defined</string>
	<string name="mfm_btnMemApply">Apply</string>
	
	<string name="scc_btnPower">Power ShortCut</string>
	<string name="scc_btnFlashLight">FlashLight ShortCut</string>
	<string name="scc_btnLockScreen">LockScreen ShortCut</string>
	<string name="scc_btnLcdBackLight">LcdBackLight ShortCut</string>
	
	<string name="lcd_title">Lcd BackLight(lowest)</string>
	<string name="lcd_text_currentLcdLightValue">Current light value: {0}</string>
	<string name="lcd_text_tip">Input: </string>
	<string name="lcd_text_currentMode_tip">Current light mode: {0}</string>
	<string name="lcd_text_currentMode_auto">Auto</string>
	<string name="lcd_text_currentMode_manual">Manual</string>
	<string name="lcd_msg_needRoot">Break lowest brightness need root</string>
	
	<string name="feedback_umeng_title">Suggestion and Feedback</string>
	<string name="umeng_feedback_title">Give me suggestion or report me the issue</string>
	<string name="umeng_feedback_content">Input your suggestion(Max 500 letters)</string>
	<string name="umeng_feedback_submit">submit</string>
	
</resources>
