<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingBottom="10dp">

<Button 
	android:id="@+id/btnPowerOff"
	android:text="@string/power_btn_powerOff"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />
<Button 
	android:id="@+id/btnReboot"
	android:text="@string/power_btn_reboot"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />
<Button 
	android:id="@+id/btnRebootToRecovery"
	android:text="@string/power_btn_rebootToRecovery"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />
<Button 
	android:id="@+id/btnSystemPoweroff"
	android:text="@string/power_btn_systemPoweroff"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />
</LinearLayout>
</RelativeLayout>