<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
<LinearLayout 
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<TextView android:id="@+id/lbl_tvCurrentLcdLightValue"
		android:text="@string/lcd_text_currentLcdLightValue"
		android:layout_width="fill_parent" android:layout_height="wrap_content" android:textSize="24dp"/>
	<SeekBar android:id="@+id/lbl_sbSelectValue" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/lcd_text_tip"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<EditText android:id="@+id/lbl_etValue" android:layout_width="100.0sp"
			android:layout_height="wrap_content" />
		<Button android:id="@+id/lbl_btnApply" android:layout_width="wrap_content"
			android:text="@string/btn_apply" android:layout_height="wrap_content" />
		<Button android:id="@+id/lbl_btnAuto" android:layout_width="wrap_content"
			android:text="@string/btn_auto" android:layout_height="wrap_content" />
		<!--
		<Button android:id="@+id/lbl_btnDown" android:layout_width="wrap_content"
			android:text="-" android:layout_height="wrap_content" />
		<Button android:id="@+id/lbl_btnUp" android:layout_width="wrap_content"
			android:text="+" android:layout_height="wrap_content" />
		 -->	
	</LinearLayout>
</LinearLayout>
</RelativeLayout>